--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 The scripts developed here were used to analyze the hydrodynamic models described in Harris, Nugent & Kasen (2016; 2016ApJ...823..100H). 
 
-The models can be downloaded from www.cori.nersc.gov/cdirs/astro250/harris16_models
+The models can be downloaded from https://portal.nersc.gov/cfs/astro250/ceharris/IaCSM_isolated_shell_models/
